Remove deprecated procedures: db.indexes and db.constraints ()
* Remove deprecated procedure: db.indexes

* Remove deprecated procedure: db.constraints

* Remove outdated tests for db.indexes